--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/}">Registration and Login System</a>
+        <a class="navbar-brand" th:href="@{/}">Moviest</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -29,7 +29,7 @@
 <br /><br />
 <div class="container">
     <div class="row">
-        <h1 class="text-center"> Registration and Login System </h1>
+        <h1 class="text-center">Booking Ticket Movie</h1>
     </div>
 </div>
 </body>
