--- a/src/main/resources/templates/movie-details.html
+++ b/src/main/resources/templates/movie-details.html
@@ -162,7 +162,7 @@
 
                 <figure class="movie-detail-banner">
 
-                    <img src="./assets/images/movie-4.png" alt="Free guy movie poster">
+                    <img th:src="@{images/movie-4.png}" alt="Free guy movie poster">
 
                     <button class="play-btn">
                         <ion-icon name="play-circle-outline"></ion-icon>
