--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -74,6 +74,20 @@
                     </div>
 
                     <div class="form-group mb-3">
+                        <label class="form-label">Username</label>
+                        <input
+                                class="form-control"
+                                id="username"
+                                name="username"
+                                placeholder="Enter username"
+                                th:field="*{username}"
+                                type="text"
+                        />
+                        <p th:errors = "*{username}" class="text-danger"
+                           th:if="${#fields.hasErrors('username')}"></p>
+                    </div>
+
+                    <div class="form-group mb-3">
                         <label class="form-label">Email</label>
                         <input
                                 class="form-control"
